--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,5 @@
 /******Fonts for site*********/
 
-
 @font-face {
     font-family: 'OpenSans Bold';
     src: url('../fonts/open-sans/OpenSans-Bold.ttf') format('truetype');
@@ -10,10 +9,351 @@
     font-family: 'OpenSans Regular';
     src: url('../fonts/open-sans/OpenSans-Regular.ttf') format('truetype');
 }
-.container{
+
+@font-face {
+    font-family: 'OpenSans Semibold';
+    src: url('../fonts/open-sans/OpenSans-Semibold.ttf') format('truetype');
+}
+
+.container {
     max-width: 1220px;
     margin: 0 auto;
 }
-body{
-    font-family: "OpenSans Regular",sans-serif;
+
+*,:after,:before {
+    box-sizing: border-box;
+}
+
+* {
+    margin: 0;
+}
+
+body {
+    font-family: "OpenSans Regular", sans-serif;
+    color: #1b1e21;
+    font-size: 16px;
+}
+
+img {
+    max-width: 100%;
+    height: auto;
+}
+
+.main-wrapper {
+    position: relative;
+}
+
+.main-wrapper::before {
+    /*    content: '';
+        position: absolute;
+        width: 100%;
+        height: auto;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        z-index: -2;
+        background: url("../img/bg-l.png")no-repeat left;*/
+}
+
+.main-wrapper::after {
+    content: '';
+    position: absolute;
+    width: 100%;
+    top: 0;
+    z-index: -2;
+    bottom: 0;
+    right: 0;
+    background: url("../img/bg-r.png") repeat-x;
+}
+
+/*STYLE BUTTON*/
+.button {
+    background: transparent;
+    display: block;
+    padding: 12px 10px;
+    text-decoration: none;
+    text-transform: uppercase;
+    font-family: "OpenSans Regular", sans-serif;
+    color: #374347;
+    text-align: center;
+    font-size: 20px;
+    margin: 8px auto;
+    border-radius: 2px;
+    line-height: 25px;
+
+}
+
+.btn-search {
+
+}
+
+.main-container {
+    background: white;
+}
+
+/*HEADER*/
+.header-bg {
+    background: #fcbb0b;
+    padding-top: 10px;
+
+}
+
+.phone a {
+    padding: 5px 26px;
+    font-size: 30px;
+    color: #3a4248;
+    text-decoration: none;
+    font-weight: bold;
+}
+
+.phone a i {
+    margin-right: 15px;
+}
+
+.social a {
+    display: inline-block;
+    font-size: 20px;
+    padding: 7px;
+    margin: 0 5px;
+    text-decoration: none;
+    color: #3a4248;
+}
+
+.social a:hover {
+    color: #fff;
+}
+
+#search {
+    width: 100%;
+
+}
+
+.input > input {
+    padding: 5px 200px 5px 5px;
+}
+
+.btn-search button {
+    padding: 5px;
+    background: #384349;
+    color: white;
+    border: 3px solid transparent;
+}
+
+/*SECTION*/
+section {
+    position: relative;
+    margin-bottom: 20px;
+}
+
+.info {
+    padding: 27px 26px 26px 30px;
+
+}
+
+.info h2, .info p a {
+    font-family: "OpenSans Regular", sans-serif;
+    color: orange;
+    font-size: 30px;
+    font-weight: 600;
+    display: inline-block;
+    width: 50%;
+    text-transform: uppercase;
+
+}
+
+.info p a {
+    text-decoration: none;
+    font-size: 1em;
+    color: white;
+    text-transform: uppercase;
+
+}
+
+.banner-loawd {
+    height: 168px;
+    background: url("../img/banner-loawd.png") no-repeat center;
+}
+
+.banner-stock {
+    height: 168px;
+    background: url("../img/banner-sale.png") no-repeat center;
+}
+
+.heading-control a {
+    color: #1b1e21;
+    font-size: 18px;
+    display: inline-block;
+    margin-right: 3px;
+    vertical-align: middle;
+}
+
+/*CARD-product*/
+.card-tov {
+    margin: 0;
+}
+
+.card-img, .card-details {
+    padding: 10px;
+}
+
+a.btn-more {
+    background: orange;
+    text-decoration: none;
+    font-size: 18px;
+    transition: .3s;
+}
+
+a.btn-more:hover {
+    background: rgba(255, 163, 0, 0.98);
+    color: white;
+    box-shadow: 0 1px 5px rgba(0, 0, 0, 0.15);
+    transform: scale(1.05);
+}
+
+.price {
+    font-size: 1.6em;
+    font-weight: bold;
+}
+
+.name, .card-details .description {
+    font-size: 1.1em;
+    text-transform: uppercase;
+}
+
+.card-img a {
+    display: block;
+    transition: .3s;
+}
+
+/*.card-tov:hover{
+    box-shadow: 0 1px 5px rgba(0, 0, 0, 0.15);
+}*/
+.card-img a:hover {
+    transform: scale(1.02);
+
+}
+
+/*ASIDE*/
+aside {
+    padding: 0;
+}
+
+.side-bar #news {
+    margin-right: 15px;
+}
+
+.box-category {
+    margin: 0 0 50px 0;
+    font-size: 0;
+    padding: 0;
+    list-style: none;
+    background: #edeef1;
+}
+
+.box-category li {
+    box-shadow: 0 1px 5px rgba(0, 0, 0, 0.15);
+}
+
+.box-category li a {
+    font-family: "OpenSans Regular", sans-serif;
+    padding: 13px 0 16px 21px;
+    display: block;
+    text-decoration: none;
+    line-height: 1.6;
+    font-size: 18px;
+    color: rgba(0, 0, 0, .65);
+
+}
+
+aside .heading, section .heading, .heading h3 {
+    background: #edeef1;
+    font-size: 24px;
+    text-transform: capitalize;
+    line-height: 35px;
+    padding: 8px 10px;
+    font-family: "OpenSans Regular", sans-serif;
+    margin-bottom: 20px;
+}
+
+.heading h3 {
+    margin-bottom: 0;
+}
+
+.side-bar .post {
+    padding: 20px 10px;
+    background: #3b444e;
+    margin-bottom: 30px;
+    color: #fff;
+}
+
+.side-bar__module .post-title {
+    font-size: 20px;
+    text-transform: capitalize;
+    line-height: 28px;
+    font-family: "OpenSans Regular", sans-serif;
+    font-weight: bold;
+    margin-bottom: 20px;
+}
+
+.side-bar__module p {
+    font-size: 14px;
+    line-height: 20px;
+    font-family: "OpenSans Regular", sans-serif;
+    font-weight: normal;
+}
+
+/*FOOTER*/
+.footer {
+    padding-top: 30px;
+    padding-bottom: 100px;
+    font-family: "OpenSans Bold", sans-serif;
+    font-size: 14px;
+    line-height: 20px;
+    color: #fff;
+    font-weight: 700;
+}
+
+.footer a {
+    color: #fcba0e;
+    display: inline-block;
+    text-transform: capitalize;
+    text-decoration: none;
+}
+
+.footer li {
+    padding: 5px 0;
+}
+
+.footer .col-title {
+    font-size: 18px;
+    line-height: 22px;
+    color: #fff;
+    font-weight: 700;
+    text-transform: capitalize;
+    margin-bottom: 5px;
+}
+
+.footer-bg {
+    background: #3b4449;
+}
+
+.footer .row-top {
+    margin: 10px 0 30px 0;
+
+}
+
+.footer .row-bottom {
+    margin: 0 0 50px 0;
+}
+
+.footer .column-wrap {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+}
+
+.shipping i, .quality i, .program i {
+    font-size: 19px;
+    padding: 0 8px 0 0;
+    color: orange;
 }
